2-authentik/postgresql-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authentik-postgresql
  namespace: default
  labels:
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: authentik-postgresql
      labels:
        app.kubernetes.io/instance: authentik
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: authentik-postgresql
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/postgres:18.3-alpine3.23
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 70
            runAsNonRoot: true
            runAsUser: 70
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "$POSTGRES_USER" -d "dbname=$POSTGRES_DB" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "$POSTGRES_USER" -d "dbname=$POSTGRES_DB" -h 127.0.0.1 -p 5432
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /var/run/postgresql
              subPath: run-dir
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /var/lib/postgresql
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
        - name: data
          emptyDir: {}
        - name: init-sql
          configMap:
            name: postgresql-init-scripts
